--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "prepare": "rimraf dist && tsc"
   },
   "devDependencies": {
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
     "rimraf": "^4.1.2",
-    "tslint": "^6.1.3",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {}
+  }
 }
