--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -9,11 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jellyfish-dev/membrane-webrtc-js": "^0.4.5",
+    "lodash.isequal": "^4.5.0",
+    "phoenix": "^1.6.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
+    "@types/lodash.isequal": "^4.5.6",
+    "@types/phoenix": "^1.5.5",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
