--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@jellyfish-dev/membrane-webrtc-js": "^0.4.5",
+    "events": "^3.3.0",
     "lodash.isequal": "^4.5.0",
     "phoenix": "^1.6.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/events": "^3.0.0",
     "@types/lodash.isequal": "^4.5.6",
     "@types/phoenix": "^1.5.5",
     "@types/react": "^18.0.28",
@@ -26,6 +28,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
