--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@jellyfish-dev/membrane-webrtc-js": "^0.4.5",
+    "@types/events": "^3.0.0",
     "@types/lodash.isequal": "^4.5.6",
     "@types/phoenix": "^1.5.5",
     "@types/react": "^18.0.28",
@@ -41,9 +42,11 @@
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "rimraf": "^4.1.2",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "events": "^3.3.0",
     "phoenix": "^1.6.16"
   }
 }
