--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "watch": "tsc --noEmit --watch",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "prettier": "^2.8.4",
     "typed-emitter": "^2.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-checker": "^0.5.6"
   }
 }
