--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@jellyfish-dev/membrane-webrtc-js": "^0.4.5",
     "axios": "^1.3.4",
+    "daisyui": "^2.51.3",
     "events": "^3.3.0",
     "lodash.isequal": "^4.5.0",
     "phoenix": "^1.6.16",
