--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "type": "git",
     "url": "git://github.com/jellyfish-dev/jellyfish-react-client.git"
   },
+  "exports": {
+    ".": "./index.js",
+    "./navigator.js": "./navigator/index.js"
+  },
   "scripts": {
     "build": "rimraf dist && tsc",
     "docs": "typedoc src/index.ts",
