--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "url": "git://github.com/jellyfish-dev/jellyfish-react-client.git"
   },
   "exports": {
-    ".": "./dist/index.js",
-    "./navigator/index.js": "./dist/navigator/index.js"
+    "./*": "./dist/*"
   },
   "scripts": {
     "build": "rimraf dist && tsc",
