--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "typesVersions": {
     "*": {
-      "navigator": ["./dist/index.d.ts"]
+      "navigator": ["dist/index.d.ts"]
     }
   },
   "scripts": {
