--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "typesVersions": {
     "*": {
-      "navigator": ["./dist/navigator/index.d.ts"]
+      "navigator": [
+        "./dist/navigator/index.d.ts"
+      ]
     }
   },
   "scripts": {
