--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react": "^18.2.0",
     "rimraf": "^4.1.2",
     "typed-emitter": "^2.1.0",
+    "typedoc": "^0.23.28",
     "typescript": "^4.9.5"
   },
   "dependencies": {
