--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -12,6 +12,7 @@
     "format:check": "prettier --check . --ignore-path ./.eslintignore"
   },
   "dependencies": {
+    "@jellyfish-dev/jellyfish-react-client": "file:../..",
     "axios": "^1.3.4",
     "daisyui": "^2.51.3",
     "events": "^3.3.0",
@@ -20,10 +21,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "vite-plugin-mkcert": "^1.13.3",
-    "@jellyfish-dev/jellyfish-react-client": "file:../.."
+    "vite-plugin-mkcert": "^1.13.3"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/events": "^3.0.0",
     "@types/lodash.isequal": "^4.5.6",
     "@types/phoenix": "^1.5.5",
