--- a/examples/minimal-react/package.json
+++ b/examples/minimal-react/package.json
@@ -12,9 +12,10 @@
     "format:check": "prettier --check . --ignore-path ./.eslintignore"
   },
   "dependencies": {
+    "@jellyfish-dev/browser-media-utils": "github:jellyfish-dev/browser-media-utils#feature/prepare-initial-release",
+    "@jellyfish-dev/jellyfish-react-client": "file:../..",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@jellyfish-dev/jellyfish-react-client": "file:../.."
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
