--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "prepare": "rimraf dist && tsc"
   },
   "devDependencies": {
-    "@types/events": "^3.0.0",
     "@types/lodash.isequal": "^4.5.6",
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -65,8 +64,7 @@
   },
   "dependencies": {
     "@jellyfish-dev/membrane-webrtc-js": "github:jellyfish-dev/membrane-webrtc-js#Change-client-to-extend-event-emitter",
-    "@jellyfish-dev/ts-client-sdk": "github:jellyfish-dev/ts-client-sdk#bugfix/initial-release",
-    "events": "^3.3.0"
+    "@jellyfish-dev/ts-client-sdk": "github:jellyfish-dev/ts-client-sdk#feature/better-docs"
   },
   "directories": {
     "example": "examples"
