--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
-    "@jellyfish-dev/browser-media-utils": "github:jellyfish-dev/browser-media-utils#feature/prepare-initial-release",
+    "@jellyfish-dev/browser-media-utils": "^0.0.1",
     "@jellyfish-dev/jellyfish-react-client": "file:../..",
     "axios": "^1.3.4",
     "daisyui": "^2.51.3",
