--- a/examples/minimal-react/package.json
+++ b/examples/minimal-react/package.json
@@ -12,7 +12,7 @@
     "format:check": "prettier --check . --ignore-path ./.eslintignore"
   },
   "dependencies": {
-    "@jellyfish-dev/browser-media-utils": "github:jellyfish-dev/browser-media-utils#feature/prepare-initial-release",
+    "@jellyfish-dev/browser-media-utils": "^0.0.1",
     "@jellyfish-dev/jellyfish-react-client": "file:../..",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
