--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@jellyfish-dev/membrane-webrtc-js": "github:jellyfish-dev/membrane-webrtc-js#Change-client-to-extend-event-emitter",
-    "@jellyfish-dev/ts-client-sdk": "github:jellyfish-dev/ts-client-sdk#main",
+    "@jellyfish-dev/membrane-webrtc-js": "^0.4.6",
+    "@jellyfish-dev/ts-client-sdk": "^0.0.1",
     "events": "^3.3.0"
   },
   "directories": {
