--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -33,7 +33,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react-swc": "^3.3.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.6.0",
