--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@jellyfish-dev/membrane-webrtc-js": "^0.4.6",
-    "@jellyfish-dev/ts-client-sdk": "github:jellyfish-dev/ts-client-sdk#v0.1.2",
+    "@jellyfish-dev/membrane-webrtc-js": "0.5.0",
+    "@jellyfish-dev/ts-client-sdk": "file:../ts-client-sdk",
     "events": "^3.3.0"
   },
   "directories": {
