--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     }
   },
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "tsc",
     "docs": "typedoc src src/experimental",
     "format": "prettier --write . --ignore-path ./.eslintignore",
     "format:check": "prettier --check . --ignore-path ./.eslintignore",
@@ -65,7 +65,7 @@
   },
   "dependencies": {
     "@jellyfish-dev/membrane-webrtc-js": "0.5.0",
-    "@jellyfish-dev/ts-client-sdk": "github:jellyfish-dev/ts-client-sdk#bugfix/fix-resource-cleanup",
+    "@jellyfish-dev/ts-client-sdk": "file:../ts-client-sdk",
     "events": "^3.3.0"
   },
   "directories": {
