--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "format": "prettier --write . --ignore-path ./.eslintignore",
     "format:check": "prettier --check . --ignore-path ./.eslintignore",
     "lint": "eslint . --ext .ts,.tsx",
-    "prepare": "rimraf dist && tsc"
+    "prepare": "tsc"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
@@ -57,7 +57,6 @@
     "lodash.isequal": "^4.5.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
-    "rimraf": "^4.1.2",
     "typed-emitter": "^2.1.0",
     "typedoc": "^0.23.28",
     "typedoc-plugin-mdn-links": "^3.0.3",
