--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@jellyfish-dev/membrane-webrtc-js": "0.5.0",
-    "@jellyfish-dev/ts-client-sdk": "github:jellyfish-dev/ts-client-sdk#main",
+    "@jellyfish-dev/ts-client-sdk": "file:../ts-client-sdk",
     "events": "^3.3.0"
   },
   "directories": {
