--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -19,6 +19,7 @@
     "daisyui": "^2.51.3",
     "events": "^3.3.0",
     "hls.js": "^1.4.8",
+    "jotai": "^2.2.2",
     "lodash.isequal": "^4.5.0",
     "phoenix": "^1.6.16",
     "react": "^18.2.0",
