--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@jellyfish-dev/membrane-webrtc-js": "0.5.0",
-    "@jellyfish-dev/ts-client-sdk": "github:jellyfish-dev/ts-client-sdk#bugfix/fix-resource-cleanup",
+    "@jellyfish-dev/membrane-webrtc-js": "github:jellyfish-dev/membrane-webrtc-js#RTC-341",
+    "@jellyfish-dev/ts-client-sdk": "github:jellyfish-dev/ts-client-sdk#RTC-341",
     "events": "^3.3.0"
   },
   "directories": {
