--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "prepare": "tsc"
   },
   "devDependencies": {
+    "@playwright/test": "^1.39.0",
     "@types/events": "^3.0.0",
     "@types/lodash.isequal": "^4.5.6",
+    "@types/node": "^20.9.0",
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "eslint": "^8.52.0",
@@ -58,6 +60,7 @@
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18.2.0",
+    "testcontainers": "^10.2.2",
     "typed-emitter": "^2.1.0",
     "typedoc": "^0.23.28",
     "typedoc-plugin-mdn-links": "^3.0.3",
