Match with ts-client-sdk

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "React client library for Jellyfish.",
   "license": "Apache-2.0",
   "author": "Membrane Team",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/src/index.js",
+  "module": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "files": [
     "dist"
   ],
@@ -24,21 +24,22 @@
     "url": "git://github.com/jellyfish-dev/react-client-sdk.git"
   },
   "exports": {
-    ".": "./dist/index.js",
-    "./experimental": "./dist/experimental/index.js"
+    ".": "./dist/src/index.js",
+    "./experimental": "./dist/src/experimental/index.js"
   },
   "typesVersions": {
     "*": {
       ".": [
-        "./dist/index.d.ts"
+        "./dist/src/index.d.ts"
       ],
       "experimental": [
-        "./dist/experimental/index.d.ts"
+        "./dist/src/experimental/index.d.ts"
       ]
     }
   },
   "scripts": {
     "build": "tsc",
+    "e2e": "NODE_OPTIONS=--dns-result-order=ipv4first playwright test",
     "docs": "typedoc src src/experimental",
     "format:fix": "prettier --write . --ignore-path ./.eslintignore",
     "format:check": "prettier --check . --ignore-path ./.eslintignore",
