--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/events": "^3.0.0",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^20.9.0",
-    "@types/react": "^18.0.28",
+    "@types/react": "18.2.21",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
