--- a/package.json
+++ b/package.json
@@ -59,13 +59,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.8",
+    "prettier-plugin-tailwindcss": "0.5.7",
     "react": "^18.2.0",
     "testcontainers": "^10.3.2",
     "typed-emitter": "^2.1.0",
     "typedoc": "^0.25.4",
     "typedoc-plugin-mdn-links": "^3.1.6",
-    "typescript": "^5.3.2"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@jellyfish-dev/ts-client-sdk": "^0.2.2",
