--- a/examples/use-camera-and-microphone-example/package.json
+++ b/examples/use-camera-and-microphone-example/package.json
@@ -12,7 +12,8 @@
     "@jellyfish-dev/react-client-sdk": "file:../..",
     "jotai": "^2.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
