--- a/examples/use-camera-and-microphone-example/package.json
+++ b/examples/use-camera-and-microphone-example/package.json
@@ -6,10 +6,10 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "tsc": "tsc"
   },
   "dependencies": {
-    "@jellyfish-dev/react-client-sdk": "file:../..",
     "jotai": "^2.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
