--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jellyfish-dev/react-client-sdk",
-  "version": "0.2.2",
+  "version": "0.2.1",
   "description": "React client library for Jellyfish.",
   "license": "Apache-2.0",
   "author": "Membrane Team",
@@ -24,23 +24,19 @@
     "url": "git://github.com/jellyfish-dev/react-client-sdk.git"
   },
   "exports": {
-    ".": "./dist/src/index.js",
-    "./experimental": "./dist/src/experimental/index.js"
+    ".": "./dist/react-client-sdk/src/index.js"
   },
   "typesVersions": {
     "*": {
       ".": [
-        "./dist/src/index.d.ts"
-      ],
-      "experimental": [
-        "./dist/src/experimental/index.d.ts"
+        "./dist/react-client-sdk/src/index.d.ts"
       ]
     }
   },
   "scripts": {
     "build": "tsc",
     "e2e": "NODE_OPTIONS=--dns-result-order=ipv4first playwright test",
-    "docs": "typedoc src",
+    "docs": "typedoc src src/experimental",
     "format:fix": "prettier --write . --ignore-path ./.eslintignore",
     "format:check": "prettier --check . --ignore-path ./.eslintignore",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
@@ -48,23 +44,23 @@
     "prepare": "tsc"
   },
   "devDependencies": {
-    "@playwright/test": "^1.41.2",
-    "@types/events": "^3.0.3",
-    "@types/lodash.isequal": "^4.5.8",
-    "@types/node": "^20.11.18",
+    "@playwright/test": "1.41.2",
+    "@types/events": "3.0.3",
+    "@types/lodash.isequal": "4.5.8",
+    "@types/node": "20.11.18",
     "@types/react": "18.2.55",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "@typescript-eslint/eslint-plugin": "7.0.1",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "react": "^18.2.0",
-    "testcontainers": "^10.7.1",
-    "typed-emitter": "^2.1.0",
-    "typedoc": "^0.25.8",
-    "typedoc-plugin-mdn-links": "^3.1.16",
+    "react": "18.2.0",
+    "testcontainers": "10.7.1",
+    "typed-emitter": "2.1.0",
+    "typedoc": "0.25.8",
+    "typedoc-plugin-mdn-links": "3.1.16",
     "typescript": "5.3.3"
   },
   "dependencies": {
