--- a/package.json
+++ b/package.json
@@ -48,27 +48,27 @@
     "prepare": "tsc"
   },
   "devDependencies": {
-    "@playwright/test": "^1.41.2",
-    "@types/events": "^3.0.3",
-    "@types/lodash.isequal": "^4.5.8",
-    "@types/node": "^20.11.18",
+    "@playwright/test": "1.41.2",
+    "@types/events": "3.0.3",
+    "@types/lodash.isequal": "4.5.8",
+    "@types/node": "20.11.18",
     "@types/react": "18.2.55",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "@typescript-eslint/eslint-plugin": "7.0.1",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "react": "^18.2.0",
-    "testcontainers": "^10.7.1",
-    "typed-emitter": "^2.1.0",
-    "typedoc": "^0.25.8",
-    "typedoc-plugin-mdn-links": "^3.1.16",
+    "react": "18.2.0",
+    "testcontainers": "10.7.1",
+    "typed-emitter": "2.1.0",
+    "typedoc": "0.25.8",
+    "typedoc-plugin-mdn-links": "3.1.16",
     "typescript": "5.3.3"
   },
   "dependencies": {
-    "@jellyfish-dev/ts-client-sdk": "^0.3.1",
+    "@jellyfish-dev/ts-client-sdk": "file:../ts-client-sdk",
     "events": "3.3.0",
     "lodash.isequal": "4.5.0"
   },
