--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@jellyfish-dev/ts-client-sdk": "^0.4.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "events": "3.3.0",
     "lodash.isequal": "4.5.0"
   },
