--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "typescript": "5.4.2"
   },
   "dependencies": {
-    "@fishjam-dev/ts-client": "^0.5.0",
+    "@fishjam-dev/ts-client": "git://github.com/fishjam-dev/ts-client-sdk#commcon",
     "events": "3.3.0",
     "lodash.isequal": "4.5.0"
   },
